# RNAvigate

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  AGENTS.md  ARCHITECTURE.md  BMTools.py  DMS_1_rnasep_profile.txt  Dockerfile  JNBarcPlot.py  LICENSE  MaPplotlib-plan.txt  README.md  RNAtools3.py  TODO.md  autodocstring.mustache  correlation_code.py  description.md  dotplot.py  env.yaml  environment.yml  filemap.md  ij_data.py  ipynb-template.ipynb  longleaf-instructions.md  mkdocs.yml  plotmapper.py  plotmapper2.py  plotmapper_orig.py  plotmapper_original.py  plottingTools.py  pyproject.toml  secondaryStructure.py  setup.py  shapemapperPlots.py  starmapper.py  styles.py  todo.md
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: cd.yml  ci.yml
.ipynb_checkpoints/: ipynb-template-checkpoint.ipynb
JNB-example/: 3d_test.md  JNBarcPlot-example.html  JNBarcPlot-example.ipynb  JNBarcPlot-example.md  ap_test.md  beta-tests.ipynb  colors_test.ipynb  colors_test.md  heatmap_test.ipynb  heatmap_test.md  kde_test.ipynb  logcompare_test.ipynb  lowss_test.ipynb  new-figure-testing.ipynb  plotmapper-example.ipynb  plotmapper-example.md  plotmapper-multiple-examples.md  plottingTools-example.html  plottingTools-example.ipynb  plottingTools-example.md  secondaryStructure-example.ipynb  secondaryStructure-example.md  ss_test.ipynb  ss_test.md  starmapper-example.ipynb
JNB-example/data/: RNaseP-Cat_structure.xrna  RNaseP.ct  RNaseP_2.ct  example-rnasep-allcorrs.txt  example-rnasep-deletions.txt  example-rnasep-pairmap.txt  example2_rnasep_profile.txt  example3-rnasep-pairmap.txt  example3_rnasep-reactivities.txt  example4-rnasep-pairmap.txt  example4_rnasep_profile.txt  example_rnasep-0-allcorrs.txt  example_rnasep-0-pairmap.txt  example_rnasep-0-rings.txt  example_rnasep-1-allcorrs.txt  example_rnasep-1-pairmap.txt  example_rnasep-1-rings.txt
RNAvigate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
analysis/: __init__.py  logcompare.py
data/: __init__.py  annotation.py  ct.py  data.py  dp.py  ij.py  log.py  pdb.py  profile.py
docs/: Makefile  annotations.md  changelog.md  data-sources.md  data-types.md  dev_style_guide.md  docs-todo.md  filters.md  full_api_index.md  getting-started.md  glossary.md  index.md  installation.md  installing-rnavigate.md  loading-data.md  modules.rst  publications.md  rna2022.md  rtd_env.yaml  starmapper.data.rst  starmapper.plots.rst  starmapper.rst  visualizing-data.md  visualizing_data.ipynb
docs/analysis-options/: deltashape.ipynb  fragmapper.ipynb
docs/dev/: changelog.md  data-sources.md  dev_style_guide.md  full_api.md  full_api_index.md  style_guide.md
docs/examples/: ap_test.ipynb  deltashape.ipynb  demo-notebook.ipynb  filtering.ipynb  fragmapper.ipynb  heatmap_test.ipynb  logcompare.ipynb  logcompare_test.ipynb  lowss_test.ipynb  multisample.ipynb  new-figure-testing.ipynb  one_sample.ipynb  ss_plots.ipynb  test_all.ipynb  transcriptome.ipynb
docs/examples/data/: Lysine-riboswitch-3d0u.nsd  RNaseP.dbn  example2-rnasep.corrs  example3_rnasep_profile.txt  example4-rnasep.corrs  example4_rnasep-reactivities.txt  hs-RMRP.nsd  tinyrna.nsd
docs/guides/: filtering.ipynb  filters.md  loading-custom-data.md
docs/plot-options/: alignment-plots.md  arc-compare-plots.md  arc-plots.md  arc_compare.ipynb  circle-plots.md  disthist-plots.md  heatmap-plots.md  linreg-plots.md  mol-plots.md  profile-plots.md  qc-plots.md  roc-plots.md  skyline-plots.md  sm-plots.md  ss-plots.md
docs/plot_options/: alignment.ipynb  arc.ipynb  arc_compare.ipynb  circle.ipynb  disthist.ipynb  heatmap.ipynb  linreg.ipynb  mol.ipynb  profile.ipynb  qc.ipynb  roc.ipynb  shapemapper.ipynb  skyline.ipynb  ss.ipynb
docs/source/: api.rst  conf.py  env.yaml  examples.rst  index.rst  installation.rst  modules.rst  requirements.txt  rna2022.rst  rnavigate.analysis.rst  rnavigate.data.rst  rnavigate.plots.rst  rnavigate.rst  starmapper.analysis.rst
fragmapper/: __init__.py  example.ipynb  fragmap.py  fragmapper.py  profile.py
fragmapper/example_data/: 2_Methyl_DMSO_subtracted_LSU_profile.txt  2_Methyl_DMSO_subtracted_LSU_ribosketch_colors.txt  2_QN_DMSO_subtracted_LSU_shapemapper_log.txt  6va4.nsd
new_plots/: arc.py  linreg.py  plots.py
old-code/: JNBarcPlot-example.md  plottingTools-example.ipynb  secondaryStructure.py
plots/: __init__.py  arc.py  circle.py  heatmap.py  linreg.py  mol.py  plots.py  qc.py  skyline.py  sm.py  ss.py
plots2/: arc.py  heatmap.py  plots.py  qc.py  skyline.py
recipe/: meta.yaml
rnavigate/: __init__.py  data_loading.py  helper_functions.py  plotting_functions.py  rnavigate.py  styles.py
rnavigate/analysis/: __init__.py  auroc.py  check_sequence.py  deltashape.py  fragmapper.py  logcompare.py  lowss.py
rnavigate/data/: __init__.py  alignments.py  annotation.py  colors.py  ct.py  data.py  dp.py  eclip.py  ij.py  interactions.py  log.py  pdb.py  profile.py  secondary_structure.py  transcriptome.py
rnavigate/examples/: __init__.py  examples.py
rnavigate/plots/: __init__.py  alignment.py  arc.py  circle.py  circle2.py  disthist.py  heatmap.py  linreg.py  mol.py  ntdist.py  patches.py  plots.py  profile.py  qc.py  roc.py  skyline.py  sm.py  ss.py
rnavigate/transcriptomics/: __init__.py  bed.py  eclip.py  transcriptome.py
src/: starmapper.py  styles.py
src/data/: __init__.py  annotation.py  ct.py  ij.py  log.py  pdb.py  profile.py
src/plots/: __init__.py  plots.py  sm.py
starmapper/: __init__.py  starmapper.py
starmapper/analysis/: logcompare.py  lowss.py
starmapper/data/: annotation.py  ct.py  data.py  ij.py  pdb.py  profile.py  rna_renderer.py
starmapper/plots/: __init__.py  arc.py  disthist.py  heatmap.py  linreg.py  mol.py  plots.py  qc.py  skyline.py  sm.py  ss.py
tests/: conftest.py  test_import.py
tests/analysis/: test_analysis.py
tests/data/: test_interactions.py  test_profile.py  test_secondary_structure.py  test_sequence.py
tests/plots/: test_plot_functions.py
tony-filter/: contactDistance_simple.py
(+159 files in other folders)
