[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RNAvigate"
version = "1.1.1"
description = "RNA visualization and graphical analysis toolset"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Patrick Irving", email = "psirving@gmail.com" },
]
keywords = ["RNA", "chemical probing", "visualization", "bioinformatics", "structural biology"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.9"
dependencies = [
    "biopython>=1.78",
    "matplotlib>=3.8",
    "numpy>=1.20.1",
    "pandas>=1.4.4",
    "py3dmol>=2.0.0",
    "requests>=2.28.0",
    "scikit-learn>=1.0.2",
    "scipy>=1.6.2",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-rtd-theme",
    "nbsphinx",
    "ipykernel",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.urls]
Homepage = "https://github.com/Weeks-UNC/RNAvigate"
Documentation = "https://rnavigate.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/Weeks-UNC/RNAvigate/issues"

[tool.ruff]
target-version = "py39"
line-length = 88
exclude = ["docs/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# Some files have load-order-dependent imports due to circular imports that must be
# resolved before alphabetical sorting can be enforced.
# See the high-priority "Fix circular imports" item in TODO.md.
ignore = ["E501", "I001"]  # line-length and import ordering

[tool.setuptools.packages.find]
include = ["rnavigate", "rnavigate.*"]

[tool.setuptools.package-data]
"rnavigate.examples.tpp_data" = ["*"]
"rnavigate.examples.rmrp_data" = ["*"]
"rnavigate.examples.rnasep_data" = ["*"]
"rnavigate.examples.rrna_fragmap_data" = ["*"]
